[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llm_sdk",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk", editable = true }

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
]


[tool.mypy]
exclude = "^llm_sdk/"

[[tool.mypy.overrides]]
module = "llm_sdk.*"
ignore_missing_imports = true
follow_imports = "skip"
